fix: remove extra padding in the code tab

--- a/css/style.css
+++ b/css/style.css
@@ -738,7 +738,7 @@ section.devsecops .inner > p {
 .devsecops__content-right .code__tab {
   display: flex;
   justify-content: space-between;
-  padding: 8px 16px;
+  padding: 8px 16px 0 16px;
   font-size: 16px;
   line-height: 1.3;
   background-color: #f2f1f5;
@@ -1079,18 +1079,17 @@ section.recognition .inner {
 
 /* GET STARTED */
 section.get-started {
-  padding-bottom: 72px;
-  background-color: #171321;
+  position: relative;
 }
 
-/* section.get-started::before {
+section.get-started::before {
   content: "";
   width: 100%;
-  height: 287px;
+  height: 100%;
   background-color: #171321;
   position: absolute;
-  bottom: -73px;
-} */
+  top: 72px;
+}
 
 section.get-started .inner {
   display: grid;
@@ -1159,6 +1158,7 @@ footer {
   background-color: #171321;
   color: #fff;
   font-size: 14px;
+  padding-top: 72px;
 }
 
 .footer__list {
